k8s/bond-deployment copy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exchange-bond
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exchange-bond
  template:
    metadata:
      labels:
        app: exchange-bond
    spec:
      containers:
        - name: exchange
          image: exchange
          ports:
            - containerPort: 8765
---
apiVersion: v1
kind: Service
metadata:
  name: exchange-bond
spec:
  selector:
    app: exchange-bond
  ports:
    - port: 8765
